@@ -143,6 +143,7 @@ void pgm_free(PROGRAMMER * const p)
   ldestroy_cb(p->id, free);
   ldestroy_cb(p->usbpid, free);
   p->id = NULL;
+  p->usbpid = NULL;
   /* this is done by pgm_teardown, but usually cookie is not set to NULL */
   /* if (p->cookie !=NULL) {
     free(p->cookie);
@@ -154,6 +155,7 @@ void pgm_free(PROGRAMMER * const p)
 PROGRAMMER * pgm_dup(const PROGRAMMER * const src)
 {
   PROGRAMMER * pgm;
+  LNODEID ln;
 
   pgm = (PROGRAMMER *)malloc(sizeof(*pgm));
   if (pgm == NULL) {
@@ -165,6 +167,18 @@ PROGRAMMER * pgm_dup(const PROGRAMMER * const src)
   memcpy(pgm, src, sizeof(*pgm));
 
   pgm->id = lcreat(NULL, 0);
+  pgm->usbpid = lcreat(NULL, 0);
+
+  for (ln = lfirst(src->usbpid); ln; ln = lnext(ln)) {
+    int *ip = malloc(sizeof(int));
+    if (ip == NULL) {
+      fprintf(stderr, "%s: out of memory allocating programmer structure\n",
+              progname);
+      exit(1);
+    }
+    *ip = *(int *) ldata(ln);
+    ladd(pgm->usbpid, ip);
+  }
 
   return pgm;
 }
